# AIPut

./: .env.example  .gitignore  LICENSE  README.md  README_en.md  create-desktop-entry.sh  install-fedora-deps.sh  install-fedora-user.sh  pyproject.toml  qaa-airtype.LICENSE  run-auto.bat  run-auto.sh  test-ai.sh  test_ai.py
.claude/: settings.local.json
.github/workflows/: test-ai.yml
openspec/: .version  AGENTS.md  PROPOSAL_DESIGN_GUIDELINES.md  project.md
openspec/changes/archive/2025-12-10-add-ai-processing/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-12-10-add-async-loading-state/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-12-10-add-auto-mode-enter/: design.md  proposal.md  tasks.md
openspec/specs/ai-processing/: spec.md
openspec/specs/mobile-ui/: spec.md
openspec/specs/notifications/: spec.md
openspec/specs/platform-abstraction/: spec.md
openspec/specs/project-renaming/: spec.md
openspec/specs/service-management/: spec.md
site/: app.js  index.html  style.css
site/config/: prompts.json
src/: config.py  generate_icon.py  remote_server.py
src/ai/: __init__.py  anthropic_processor.py  processing_service.py  processor.py  zai_processor.py
src/platform_adapters/: __init__.py  base.py  factory.py
src/platform_adapters/linux/: __init__.py  adapter.py  wayland.py  x11.py
src/platform_adapters/macos/: __init__.py  adapter.py
src/platform_adapters/windows/: __init__.py  adapter.py
src/platform_detection/: __init__.py  capabilities.py  detector.py
(+38 files in other folders)
